Implementar Scan de qr y bar de 3 bibliotecas
Se implemento barcodescanner, zxing-android-embedded(Dependientes de ZXing) y MobileVision(Dependiente de Google api Vision [Por deprecarse...])

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">QR Code Compare</string>
+    <string name="turn_on_flashlight">Turn on Flashlight</string>
+    <string name="turn_off_flashlight">Turn off Flashlight</string>
+    <string name="scanner1">MobileVisionBarcodeScanner</string>
+    <string name="scanner2">zxing-android-embedded</string>
+    <string name="scanner3">barcodescanner</string>
+
 </resources>
